//
//  Section.swift
//  NYTimesNewsApi
//
//  Created by Balaji V on 5/30/22.
//

import Foundation

public enum Section: String {
    case home
    case arts
    case automobiles
    case books
    case business
    case fashion
    case food
    case health
    case insider
    case magazine
    case movies
    case nyregion
    case obituaries
    case opinion
    case politics
    case realestate
    case science
    case sports
    case sundayreview
    case technology
    case theater
    case tMagazine
    case travel
    case upshot
    // it is acronym for united states
    // swiftlint:disable:next identifier_name
    case us
    case world
}
